--- a/1. HTML/forms.html
+++ b/1. HTML/forms.html
@@ -10,37 +10,39 @@
 </head>
 
 <body>
-	<form>
-		<input type="email" placeholder="type here..." name="email" />
+	<div>
+		<form>
+			<input type="email" placeholder="type here..." name="email" />
 
-		<br /><br />
+			<br /><br />
 
-		<textarea name="textarea">My content goes here</textarea>
+			<textarea name="textarea">My content goes here</textarea>
 
-		<br /><br />
+			<br /><br />
 
-		<select>
-			<option>Select an option...</option>
-			<option>1</option>
-			<option>2</option>
-			<option>3</option>
-		</select>
+			<select>
+				<option>Select an option...</option>
+				<option>1</option>
+				<option>2</option>
+				<option>3</option>
+			</select>
 
-		<br /><br />
+			<br /><br />
 
-		<input type="radio" name="color" /> Red
-		<input type="radio" name="color" /> Green
+			<input type="radio" name="color" /> Red
+			<input type="radio" name="color" /> Green
 
-		<br /><br />
+			<br /><br />
 
-		<input type="checkbox" name="dog" value="1" /> Dog
-		<input type="checkbox" /> Cat
-		<input type="checkbox" /> Fish
+			<input type="checkbox" name="dog" value="1" /> Dog
+			<input type="checkbox" /> Cat
+			<input type="checkbox" /> Fish
 
-		<br /><br />
+			<br /><br />
 
-		<input type="submit" value="Click Me!" />
-	</form>
+			<input type="submit" value="Click Me!" />
+		</form>
+	</div>
 </body>
 
 </html>
