--- a/1. HTML/forms.html
+++ b/1. HTML/forms.html
@@ -11,6 +11,8 @@
 
 <body>
 	<div>
+		<a name="top"></a>
+
 		<form>
 			<input type="email" placeholder="type here..." name="email" />
 
@@ -42,6 +44,138 @@
 
 			<input type="submit" value="Click Me!" />
 		</form>
+
+		<form>
+			<input type="email" placeholder="type here..." name="email" />
+
+			<br /><br />
+
+			<textarea name="textarea">My content goes here</textarea>
+
+			<br /><br />
+
+			<select>
+				<option>Select an option...</option>
+				<option>1</option>
+				<option>2</option>
+				<option>3</option>
+			</select>
+
+			<br /><br />
+
+			<input type="radio" name="color" /> Red
+			<input type="radio" name="color" /> Green
+
+			<br /><br />
+
+			<input type="checkbox" name="dog" value="1" /> Dog
+			<input type="checkbox" /> Cat
+			<input type="checkbox" /> Fish
+
+			<br /><br />
+
+			<input type="submit" value="Click Me!" />
+		</form>
+
+		<form>
+			<input type="email" placeholder="type here..." name="email" />
+
+			<br /><br />
+
+			<textarea name="textarea">My content goes here</textarea>
+
+			<br /><br />
+
+			<select>
+				<option>Select an option...</option>
+				<option>1</option>
+				<option>2</option>
+				<option>3</option>
+			</select>
+
+			<br /><br />
+
+			<input type="radio" name="color" /> Red
+			<input type="radio" name="color" /> Green
+
+			<br /><br />
+
+			<input type="checkbox" name="dog" value="1" /> Dog
+			<input type="checkbox" /> Cat
+			<input type="checkbox" /> Fish
+
+			<br /><br />
+
+			<input type="submit" value="Click Me!" />
+		</form>
+
+		<form>
+			<input type="email" placeholder="type here..." name="email" />
+
+			<br /><br />
+
+			<textarea name="textarea">My content goes here</textarea>
+
+			<br /><br />
+
+			<select>
+				<option>Select an option...</option>
+				<option>1</option>
+				<option>2</option>
+				<option>3</option>
+			</select>
+
+			<br /><br />
+
+			<input type="radio" name="color" /> Red
+			<input type="radio" name="color" /> Green
+
+			<br /><br />
+
+			<input type="checkbox" name="dog" value="1" /> Dog
+			<input type="checkbox" /> Cat
+			<input type="checkbox" /> Fish
+
+			<br /><br />
+
+			<input type="submit" value="Click Me!" />
+		</form>
+
+		<form>
+			<input type="email" placeholder="type here..." name="email" />
+
+			<br /><br />
+
+			<textarea name="textarea">My content goes here</textarea>
+
+			<br /><br />
+
+			<select>
+				<option>Select an option...</option>
+				<option>1</option>
+				<option>2</option>
+				<option>3</option>
+			</select>
+
+			<br /><br />
+
+			<input type="radio" name="color" /> Red
+			<input type="radio" name="color" /> Green
+
+			<br /><br />
+
+			<input type="checkbox" name="dog" value="1" /> Dog
+			<input type="checkbox" /> Cat
+			<input type="checkbox" /> Fish
+
+			<br /><br />
+
+			<input type="submit" value="Click Me!" />
+		</form>
+
+		<p><a href="http://www.google.com">Google</a></p>
+		<p><a href="helloworld.html">Hello World</a></p>
+		<p><a href="#top">Back to top</a></p>
 	</div>
 </body>
 
