--- a/1. HTML/index.html
+++ b/1. HTML/index.html
@@ -54,7 +54,31 @@
 	<img src="images/man.jpg" width="200px" />
 	<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b1/Japanese_white-eye_at_Tenn%C5%8Dji_Park_in_Osaka%2C_January_2016_III.jpg/1920px-Japanese_white-eye_at_Tenn%C5%8Dji_Park_in_Osaka%2C_January_2016_III.jpg" width="300px" height="100px" />
 
-	<h2>Form example</h2>
+	<table>
+		<tr>
+			<th>Names</th>
+			<th>Age</th>
+			<th>Gender</th>
+		</tr>
+
+		<tr>
+			<td>Rob</td>
+			<td>33</td>
+			<td>Male</td>
+		</tr>
+
+		<tr>
+			<td>Rob</td>
+			<td>33</td>
+			<td>Male</td>
+		</tr>
+
+		<tr>
+			<td>Rob</td>
+			<td>33</td>
+			<td>Male</td>
+		</tr>
+	</table>
 </div>
 </body>
 
