--- a/1. HTML/helloworld.html
+++ b/1. HTML/helloworld.html
@@ -1,1 +1,39 @@
-Hello World
+<!doctype html>
+<html>
+
+<head>
+	<title>Hello World</title>
+
+	<meta charset="utf-8" />
+	<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+</head>
+
+<body>
+	<h1>Hello World!</h1>
+
+	<h2>A few facts about the world we live in</h2>
+
+	<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/The_Blue_Marble_%28remastered%29.jpg/1280px-The_Blue_Marble_%28remastered%29.jpg"
+		width="300px" />
+
+	<p>Earth is the third planet from the Sun and is the largest of the
+		terrestrial planets. Unlike the other planets in the solar system that are named
+		after classic deities the Earth’s name comes from the Anglo-Saxon word erda
+		which means ground or soil. The Earth was formed approximately 4.54 billion
+		years ago and is the only known planet to support life.</p>
+
+	<hr />
+
+	<h3>About the earth</h3>
+
+	<ul>
+		<li><strong>Mass: </strong>5,972,190,000,000,000 billion kg</li>
+		<li><strong>Diameter at equator: </strong>12,756 km</li>
+		<li><strong>Satellites </strong><a href="http://space-facts.com/the-moon/">The Moon</a></li>
+		<li><strong>Mass: </strong> 5,972,190,000,000,000 billion kg</li>
+		<li><strong>Mass: </strong> 5,972,190,000,000,000 billion kg</li>
+	</ul>
+</body>
+
+</html>
