--- a/1. HTML/helloworld.html
+++ b/1. HTML/helloworld.html
@@ -10,6 +10,8 @@
 </head>
 
 <body>
+	<iframe align="right" width="560" height="315" src="https://www.youtube.com/embed/W4PM9ZEP19A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 	<h1>Hello World!</h1>
 
 	<h2>A few facts about the world we live in</h2>
@@ -31,9 +33,50 @@
 		<li><strong>Mass: </strong>5,972,190,000,000,000 billion kg</li>
 		<li><strong>Diameter at equator: </strong>12,756 km</li>
 		<li><strong>Satellites </strong><a href="http://space-facts.com/the-moon/">The Moon</a></li>
-		<li><strong>Mass: </strong> 5,972,190,000,000,000 billion kg</li>
-		<li><strong>Mass: </strong> 5,972,190,000,000,000 billion kg</li>
 	</ul>
+
+	<hr />
+
+	<h3>Top 3 earth facts</h3>
+
+	<ol>
+		<li>The Earth’s rotation is gradually slowing.</li>
+		<li>A year isn't exactly 365 days, and the earth doesn't take 24 hours to rotate</li>
+		<li>70% of the earth's surface is water, and only one third of its fresh water is unfrozen</li>
+	</ol>
+
+	<hr />
+
+	<h3>Earth's nearest neighbours</h3>
+
+	<table>
+		<tr>
+			<th>Name</th>
+			<th>Radius</th>
+			<th>Average</th>
+			<th>Temperature</th>
+		</tr>
+
+		<tr>
+			<td>Mars</td>
+			<td>3,390km</td>
+			<td>-55 &deg;C </td>
+		</tr>
+
+		<tr>
+			<td>Venus</td>
+			<td>6,052km</td>
+			<td>460 &deg;C </td>
+		</tr>
+	</table>
+
+	<hr />
+
+	<form action="https://space-facts.com/earth/" target="_blank">
+		<p>What to know more?</p>
+
+		<input type="submit" value="Click Here!" />
+	</form>
 </body>
 
 </html>
