--- a/2. CSS/index.html
+++ b/2. CSS/index.html
@@ -10,7 +10,7 @@
 
 	<style type="text/css">
 		.large {
-			font-size: 300%;
+			font-size: 200%;
 		}
 
 		#green {
@@ -24,12 +24,30 @@
 		.bold {
 			font-weight: bold;
 		}
+
+		.bluebox {
+			background-color: blue;
+			width: 200px;
+			height: 200px;
+		}
+
+		.redbox {
+			background-color: red;
+			width: 300px;
+			height: 100px;
+		}
 	</style>
 </head>
 
 <body>
-	<p class="large">This is some text.</p>
-	<p id="green" class="large">This is some more text.</p>
+	<div class="bluebox">
+		<p class="large">This is some text.</p>
+	</div>
+
+	<div class="redbox">
+		<p id="green" class="large">This is some more text.</p>
+	</div>
+
 	<p>The third <span class="underline large bold">word</span> in this paragraph is underlined.</p>
 </body>
 
