--- a/2. CSS/index.html
+++ b/2. CSS/index.html
@@ -25,30 +25,42 @@
 			font-weight: bold;
 		}
 
-		.bluebox {
-			background-color: blue;
+		.purplebox {
+			background-color: #B404AE;
 			width: 200px;
 			height: 200px;
+			float: left;
 		}
 
-		.redbox {
-			background-color: red;
+		.greenbox {
+			background-color: #295715;
 			width: 300px;
 			height: 100px;
+			float: right;
+		}
+
+		.floatleft {
+			float: left;
+		}
+
+		.clear {
+			clear: both;
 		}
 	</style>
 </head>
 
 <body>
-	<div class="bluebox">
+	<div class="purplebox">
 		<p class="large">This is some text.</p>
 	</div>
 
-	<div class="redbox">
+	<div class="greenbox">
 		<p id="green" class="large">This is some more text.</p>
 	</div>
 
-	<p>The third <span class="underline large bold">word</span> in this paragraph is underlined.</p>
+	<div class="clear"></div>
+
+	<p class="floatleft">The third <span class="underline large bold">word</span> in this paragraph is underlined.</p>
 </body>
 
 </html>
