--- a/2. CSS/bbc.html
+++ b/2. CSS/bbc.html
@@ -11,18 +11,53 @@
 	<style type="text/css">
 		body {
 			margin: 0;
+			font-family: arial,helvetica,sans-serif;
 		}
 
 		#topbar {
 			background-color: #7A0000;
 			width: 100%;
 			height: 40px;
+			color: white;
 		}
 
 		.fixedwidth {
-			width: 1000px;
+			width: 1050px;
 			margin: 0 auto;
-			background-color: blue;
+		}
+
+		#logodiv {
+			padding-top: 5px;
+			padding-right: 10px;
+			float: left;
+			border-right: 1px solid #990000;
+		}
+
+		#signdiv {
+			font-weight: bold;
+			font-size: 0.9em;
+			padding: 6px 80px 12px 20px;
+			float: left;
+			border-right: 1px solid #990000;
+		}
+
+		#signdiv img {
+			position: relative;
+			top: 5px;
+		}
+
+		#topmenudiv {
+			float: left;
+		}
+
+		#topmenudiv ul {
+			margin-top: 10px;
+		}
+
+		#topmenudiv li {
+			list-style: none;
+			font-weight: bold;
+			font-size: 0.9em;
 		}
 	</style>
 </head>
@@ -31,7 +66,21 @@
 	<div id="container">
 		<div id="topbar">
 			<div class="fixedwidth">
-				123456
+				<div id="logodiv">
+					<img src="images/bbclogo.png" width='100px'/>
+				</div>
+
+				<div id="signdiv">
+					<img src="images/signin.png" width='20px'/>
+
+					Sign In
+				</div>
+
+				<div id="topmenudiv">
+					<ul>
+						<li>News</li>
+					</ul>
+				</div>
 			</div>
 		</div>
 	</div>
