--- a/2. CSS/bbc.html
+++ b/2. CSS/bbc.html
@@ -22,7 +22,7 @@
 		}
 
 		.fixedwidth {
-			width: 1150px;
+			width: 1200px;
 			margin: 0 auto;
 		}
 
@@ -73,6 +73,38 @@
 		#searchdiv input {
 			height: 25px;
 			border: none;
+			padding-left: 10px;
+			font-size: 0.9em;
+			background-image: url('images/magnify.png');
+			background-repeat: no-repeat;
+			background-position: right center;
+			background-size: 20px 20px;
+		}
+
+		.break {
+			clear: both;
+		}
+
+		#newsbar {
+			background-color: #990000;
+			width: 100%;
+			height: 80px;
+			color: white;
+		}
+
+		#newsbar p {
+			margin: 0;
+			padding: 0;
+			padding-top: 10px;
+		}
+
+		#newsheader {
+			font-size: 3em;
+		}
+
+		#uk {
+			font-size: 0.7em;
+			padding-left: 20px;
 		}
 	</style>
 </head>
@@ -105,8 +137,16 @@
 				</div>
 
 				<div id="searchdiv">
-					<input type="text" />
+					<input type="text" placeholder="Search" />
 				</div>
+			</div>
+		</div>
+
+		<div class="break"></div>
+
+		<div id="newsbar">
+			<div class="fixedwidth">
+				<p id="newsheader">NEWS<span id="uk">UK</span></p>
 			</div>
 		</div>
 	</div>
